tests/NormalTests/paczka1/fuzzy1/87593557.err
Error in line 4: MVZyDFp8kV9 S213 92,1
Error in line 7: irXLZHq3b64 S213 4,9
Error in line 5: MVZyDFp8kV9 A384 19,6
Error in line 17: S213 A308 49,4
Error in line 8: irXLZHq3b64 S724 36,5
Error in line 35: swuHXy7Si S213 24,20
Error in line 30: MVZyDFp8kV9 S213 41,0
Error in line 33: swuHXy7Si A308 92,0
